2005-09-22  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Added timeout for the IP Checker.

2005-09-22  Damien Sandras  <dsandras@gnome.org>

	* src/accounts.cpp: Added message when unregistering from a
	gatekeeper.
	
2005-09-22  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Use a saner insane default location for the
	schemas.

2005-09-22  Julien Puydt  <jpuydt@free.fr>

	* configure.in: The mingw port doesn't need to link to pthreads.

2005-09-22  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Removed the test on pthreads, since it's not a
	dependency of gnomemeeting but of pwlib.

2005-09-21  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp, src/tray.cpp: Do not use
	gnomemeeting_dialog_show outside of a thread.

2005-09-20  Damien Sandras  <dsandras@gnome.org>
	
	* gnomemeeting.schemas.in.in: Removed obsolete key.

	* src/endpoint.cpp: Fixed function using updated API.

2005-09-18 Kilian Krause <kk@verfaction.de>

	* xdap_data/ils_nm_mod.xml: Remove unneeded double sappid entry which
	is unconforming to LDAP anyway.

2005-09-15  Damien Sandras  <dsandras@gnome.org>

	* lib/gnome_pref_window.c: Changed the update policy to only update 
	at the end of the slider move.

	* src/config.cpp: Allow dynamic video quality and maximum video 
	bandwidth updates.

	* src/pref_window.cpp: Removed now unused preference 
	(maximum transmitted background blocks).

	* src/endpoint.cpp: Code cleanups.
	
	* configure.in: Incremented version and SCHEMA_AGE. Do not test for 
	IXJ presence.

	* src/common.h: Disable IXJ for now, even if available in OPAL.

2005-09-14  Damien Sandras  <dsandras@gnome.org>

	* lib/dialog.c: Use show_all so that the windows have their content
	displayed.
	
	* src/endpoint.cpp: Removed now unuseful FIXME.

	* src/callbacks.cpp: Small cleanup.

	* src/gnomemeeting.cpp: Clear all calls before deleting the endpoint.

2005-09-14  Julien Puydt  <jpuydt@free.fr>
