@@ -1,3 +1,8 @@
+2005-09-23  Julien Puydt  <jpuydt@free.fr>
+
+	* lib/gm_conf-glib.c: Made loading configuration more sane and more
+	flexible (and more easily portable).
+
 2005-09-22  Damien Sandras  <dsandras@gnome.org>
 
 	* src/endpoint.cpp: Added timeout for the IP Checker.
